--- a/src/app.scss
+++ b/src/app.scss
@@ -1,4 +1,5 @@
-@import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
+$bootstrap-sass-asset-helper: true;
+@import "~bootstrap-sass/assets/stylesheets/bootstrap";
 @import '../node_modules/font-awesome/css/font-awesome.min.css';
 
 * {
